---
source: src/lexer.rs
expression: "p(r#\"\nimport A as A\n\nfoo :: Int\nfoo = bar + baz\n        \"#)"
---
Ok(LayTop)
Ok(Lower("import"))
Ok(Upper("A"))
Ok(Lower("as"))
Ok(Upper("A"))
Ok(LayTop)
Ok(Lower("foo"))
Ok(ColonColon)
Ok(Upper("Int"))
Ok(LayTop)
Ok(Lower("foo"))
Ok(Equals)
Ok(Lower("bar"))
Ok(Op("+"))
Ok(Lower("baz"))
Ok(LayTop)
